# espeak-synth

./: .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
espeak-sys/: Cargo.toml  build.rs  wrapper.h
espeak-sys/src/: lib.rs
src/: callback.rs  error.rs  lib.rs  parameter.rs
tests/: espeak_synth.rs
